# ty

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  Makefile  README.md  doc.ty  get_constants.ty  getioctls.sh  interpreter.c  intro.md  prelude.ty  repl.c  test.ty  ty.c  tyd.ty  tyls.c  vcpkg-configuration.json  vcpkg.json
.github/workflows/: release.yml
bench/: richards.ty  template.ty
cmake/: CPackSetup.cmake  FindSystemDeps.cmake  SystemUtils.cmake  VersionInfoTarget.cmake
doc/: fix.ty  make.ty  pkg.css  style.css
doc/intro/: 01-start.md  02-basics.md  03-functions.md  04-collections.md  05-pattern-matching.md  06-tags.md  07-classes.md  08-generators.md  09-macros.md  10-io-etc.md  11-threads.md  12-ffi.md  13-strings.md  14-exceptions.md  15-perf.md
docker/: build-image-ubuntu-buildtools.sh  ubuntu-buildtools.dockerfile
dtoa/: dtoa.h
examples/: aaa.ty  aoc  b.ty  b2.ty  bad.ty  bad11.ty  bad2.ty  bad5.ty  basket.ty  bd.ty  bench.ty  bench2.ty  blah.ty  child.ty  coast.ty  counter.ty  curses.ty  daily.ty  dog.ty  each_ret.ty  echo.ty  ex.ty  ex2.ty  ex3.ty  except.ty  expr.ty  f.ty  fib.ty  file.ty  fizzbuzz.ty  foo.ty  fork.ty  gc_stress.ty  guesser.ty  guessme.ty  gussme.ty  hidato.ty  iter.ty  life.ty  llhttp.ty  (+30 more)
freebsd/: Makefile  distinfo  pkg-descr  pkg-plist
include/: alloc.h  array.h  ast.h  barrier.h  blob.h  builtins.h  cffi.h  chan.h  class.h  compiler.h  curl.h  defs.h  dict.h  functions.c  functions.h  gc.h  highlight.h  html.h  intern.h  istat.h  itable.h  jit.h  json.h  lex.h  location.h  log.h  mmmm.h  mod.h  object.h  operators.h  panic.h  parse.h  polyfill_dlfcn.h  polyfill_memmem.h  polyfill_stdatomic.h  polyfill_time.h  polyfill_unistd.h  queue.h  scope.h  sqlite.h  (+17 more)
lib/: @os.ty  apple.ty  argparse.ty  chalk.ty  clap.ty  curl.ty  curses.ty  cutil.ty  date.ty  dbg.ty  dbus.ty  dotenv.ty  ety.ty  fcgi.ty  ffi.ty  fs.ty  help.ty  html.ty  http.ty  ini.ty  ink.ty  inotify.ty  io.ty  kqueue.ty  llhttp.ty  llhttp2.ty  log.ty  markdown.ty  net.ty  np.ty  os.ty  path.ty  pq.ty  prelude.ty  pretty.ty  psql.ty  raylib.ty  readln.ty  repl.ty  schema.ty  (+25 more)
lib/.ty/: fetch.ty  fs.ty  prelude.ty
lib/dbus/: core.ty  hostname.ty  login.ty
lib/ink/: themes.ty
lib/ty/: repl.ty  test.ty
libco/: settings.h
libmd/: CMakeLists.txt
libmd/src/: md2hl.c  md4.c  md4hl.c  md5.c  md5hl.c  rmd160hl.c  sha1.c  sha1hl.c  sha2.c  sha224hl.c  sha256hl.c  sha384hl.c  sha512_256hl.c  sha512hl.c
nsync/: CMakeLists.txt
nsync/builds/x86_64.macos.clang.atm-os/: Makefile
nsync/platform/posix/src/: time_rep.c
perf/: compare.py  compare.ty  lib.ty  run.ty  run_py.py
perf/benchmarks/: chaos.ty  fannkuch.ty  float_bench.ty  generators.ty  nbody.ty  nqueens.ty  raytrace.ty  recursion.ty  richards.ty  spectral_norm.ty
perf/benchmarks_py/: chaos.py  fannkuch.py  float_bench.py  generators.py  nbody.py  nqueens.py  raytrace.py  recursion.py  richards.py  spectral_norm.py
scripts/: build-in-docker-ubuntu16.sh  build-in-docker-ubuntu18.sh  build-in-docker-ubuntu20.sh  build-in-docker-ubuntu22.sh  build-in-docker-ubuntu24.sh  build-in-docker.sh  geterrnos.sh  getioctls.sh  setup-vcpkg.sh
src/: accelerate.c  alloc.c  array.c  ast.c  blob.c  chan.c  class.c  compiler.c  cscope.in.out  cscope.out  cscope.po.out  curl.c  dict.c  ffi.c  functions.c  gc.c  highlight.c  html.c  intern.c  itable.c  jit.c  jit_arm64.dasc  jit_arm64.h  jit_x64.dasc  jit_x64.h  json.c  keywords.gperf  lex.c  mod.c  object.c  operators.c  panic.c  parse.c  queue.c  scope.c  sqlite.c  str.c  table.c  tags.c  token.c  (+4 more)
tests/: array.ty  array_bugs.ty  b64.ty  break_break.ty  chan.ty  constraint.ty  continue2.ty  decorator_macro.ty  default_ctor.ty  default_param.ty  dict_bugs.ty  ety.ty  eval.ty  eval_gen.ty  eval_throw.ty  ffi.ty  ffi_nested.ty  ffi_union.ty  finally_throw.ty  fun_macro.ty  gen.ty  ifnot.ty  macro_setter.ty  match.ty  matrix.ty  members.ty  misc_syscalls.ty  missing.ty  mut_arith.ty  new_syscalls.ty  nsync.ty  on_exit.ty  or_alias.ty  os.ty  overload.ty  override.ty  path.ty  queue.ty  ref_pattern.ty  refine.ty  (+24 more)
tests/clap/: basic.ty  env_and_no.ty  pos_check.ty  subcommand.ty
tests/ink/: test-context.ty  test-divider-badge.ty  test-focus.ty  test-layout.ty  test-positions.ty  test-range-selector.ty  test-reconcile.ty  test-scroll-view.ty  test-select.ty  test-text-input.ty  test-timer.ty
tests/lib/: chalk.ty  curl.ty  date.ty  dotenv.ty  kqueue.ty  markdown.ty  np.ty  psql.ty  psql_schema.ty  schema.ty  sql.ty  sqlite.ty  temporal.ty  uv.ty  watchfs.ty  yaml.ty
tests/lsp/: basic.ty
unibilium/: CMakeLists.txt
vcpkg_ports/mimalloc/: portfile.cmake
